# Fastest-Integer-Sort

./: .gitignore  CMakeLists.txt  LICENSE  README.md  basic_sorts.h  integer_sort.cpp  integer_sort.h  ir_sort_competitions.cpp  project_Fastest-Integer-Sort.cpp
Graphs_and_analysis/All_Comparisons/: plotter.py
Graphs_and_analysis/All_Comparisons/rawData_int16_t/: rawData_5000_100.csv  rawData_5000_1000.csv  rawData_5000_10000.csv  rawData_5000_100000.csv  rawData_5000_1000000.csv
Graphs_and_analysis/All_Comparisons/rawData_int32_t/: 32bit_rawData_extras.txt  rawData_5000_1000.csv  rawData_5000_10000.csv  rawData_5000_100000.csv  rawData_5000_1000000.csv  tempStop_rawData_5000_10.csv
Graphs_and_analysis/All_Comparisons/rawData_int64_t/: 64bit_rawData_extras.txt  rawData_5000_100.csv  rawData_5000_1000.csv  rawData_5000_10000.csv  tempStop_rawData_5000_10.csv
Graphs_and_analysis/All_Comparisons/rawData_int8_t/: 08bit_rawData_extras.txt  rawData_5000_100000.csv  rawData_5000_1000000.csv  tempStop_rawData_5000_10.csv
Graphs_and_analysis/Old Graphs/: x_graph_plot_stats.ods  x_plot_graph.py
Graphs_and_analysis/insertion_sort_threshold/: obj_comparison.txt  obj_comparison2.txt
graphs_and_analysis/: Swapping Optimization Stats.md
graphs_and_analysis/Graphs_v2/rawData_int64_t/: rawData_5000_100000.csv  rawData_5000_1000000.csv
graphs_and_analysis/Graphs_v3/: data_extractor_v3.py  graph_plotter_v3.py  time_comparision_128_1562500.txt  time_comparision_512_390625.txt  time_comparision_512_781250.txt
graphs_and_analysis/all_comparisons/rawData_int16_t/: 16bit_rawData_extras.txt  tempStop_rawData_5000_10.csv
graphs_and_analysis/all_comparisons/rawData_int32_t/: rawData_5000_100.csv
graphs_and_analysis/all_comparisons/rawData_int8_t/: rawData_5000_100.csv  rawData_5000_1000.csv  rawData_5000_10000.csv
graphs_and_analysis/insertion_sort_threshold/: obj_comparison1.txt
src/: CMakeLists.txt  basic_sorts.cpp  basic_sorts.hpp  integer_sort.cpp  integer_sort.hpp  integer_sort_objects_small.cpp  integer_sort_objects_small.hpp  ir_commons.hpp  ir_sort_competitions.cpp
test/: CMakeLists.txt  common_functions.hpp  compile.sh  project_Fastest-Integer-Sort.cpp  project_SortingBest_integer.cpp  project_SortingBest_object.cpp  raw_data_generator.sh  raw_data_generator_integer.cpp  run.sh  temp_raw_data.cpp
test/ska_sort_comparison/: rawData_1000000_int32_t.csv  rawData_1000000_int64_t.csv  rawData_100000_int32_t.csv  rawData_100000_int64_t.csv
